// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots AuthForm AuthForm view 1`] = `
<div
  className="overlay"
>
  <div
    className="item"
  >
    <p>
      To use the Search Party tool, you must be logged in to USCIS.
    </p>
    <p>
      <a
        className="usa-button usa-button--primary"
        href="#test-link"
      >
        <svg
          aria-hidden="true"
          className="svg-inline--fa fa-user-circle fa-w-16 "
          data-icon="user-circle"
          data-prefix="fas"
          focusable="false"
          role="img"
          style={Object {}}
          viewBox="0 0 496 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M248 8C111 8 0 119 0 256s111 248 248 248 248-111 248-248S385 8 248 8zm0 96c48.6 0 88 39.4 88 88s-39.4 88-88 88-88-39.4-88-88 39.4-88 88-88zm0 344c-58.7 0-111.3-26.6-146.5-68.2 18.8-35.4 55.6-59.8 98.5-59.8 2.4 0 4.8.4 7.1 1.1 13 4.2 26.6 6.9 40.9 6.9 14.3 0 28-2.7 40.9-6.9 2.3-.7 4.7-1.1 7.1-1.1 42.9 0 79.7 24.4 98.5 59.8C359.3 421.4 306.7 448 248 448z"
            fill="currentColor"
            style={Object {}}
          />
        </svg>
          Log In to USCIS
      </a>
    </p>
  </div>
</div>
`;

exports[`Storyshots Card no content 1`] = `
<div
  className="card"
>
  <div
    className="card-body"
  />
</div>
`;

exports[`Storyshots Card with text 1`] = `
<div
  className="card"
>
  <div
    className="card-body"
  >
    Hi I'm a well
  </div>
</div>
`;

exports[`Storyshots CaseList Case list while loading data 1`] = `
<p>
  Loading...
</p>
`;

exports[`Storyshots CaseList Case list with some data 1`] = `
<p>
  Loading...
</p>
`;

exports[`Storyshots CaseList Caselist with more cases to load 1`] = `
<p>
  Loading...
</p>
`;

exports[`Storyshots CaseList Empty case list 1`] = `
<p>
  Loading...
</p>
`;

exports[`Storyshots DetailNoteDisplay General comment 1`] = `"This is a general comment."`;

exports[`Storyshots DetailNoteDisplay Trouble ticket 1`] = `
Array [
  "ServiceNow ticket",
  " ",
  <a
    href="http://localhost:1111/12345"
  >
    12345
  </a>,
  " was associated with this case.",
]
`;

exports[`Storyshots FormattedDate Last Refresh 1`] = `
<span
  className="formatted-date"
>
  Last Refresh
  : 
  8/11/2014, 12:00:00 AM
</span>
`;

exports[`Storyshots I90Table Empty Table - ALL 1`] = `null`;

exports[`Storyshots I90Table Empty Table - TRIAGED 1`] = `null`;

exports[`Storyshots I90Table Empty Table - With Filter On 1`] = `null`;

exports[`Storyshots I90Table Triaged case view 1`] = `
Array [
  <div
    style={
      Object {
        "margin": "10px 0",
      }
    }
  >
    <div
      className="card"
    >
      <div
        className="card-body"
      >
        <div
          className="case-header"
        >
          <a
            className="receiptNumber"
            href="https://example.com/FKE5381523"
            target="_elis_viewer"
          >
            FKE5381523
          </a>
          <div
            className="remove-button-margin"
          >
            <button
              className=" usa-button"
              disabled={false}
              onClick={[Function]}
              type="button"
            >
              Edit
            </button>
          </div>
        </div>
        <div
          className="case-data"
        >
          <div
            className="case-state"
          >
            <div
              style={
                Object {
                  "marginRight": "5px",
                }
              }
            >
              <span
                className="usa-tag bg-base-lighter"
                data-for="Untouched"
                data-tip="Unkown aging case"
                style={
                  Object {
                    "textTransform": "none",
                    "whiteSpace": "nowrap",
                  }
                }
              >
                 
                <div
                  className="__react_component_tooltip place-top type-dark "
                  data-id="tooltip"
                  id="Untouched"
                />
              </span>
            </div>
          </div>
          <div
            className="case-problem"
          />
          <div
            className="case-creation"
          >
            Aug 6, 2019
          </div>
          <div
            className="case-reason text-gray-50"
          >
            (
            Boredom
            )
          </div>
        </div>
        <div
          className="case-metadata text-gray-70"
        >
          <div
            className="status"
          >
            Pending
             -
             
            Printing
          </div>
          <div
            className="platform"
          >
            Legacy
             
            Platform
          </div>
        </div>
        <div
          className="case-footer"
        >
          <div
            className="case-links"
          >
            <div
              style={
                Object {
                  "display": "flex",
                }
              }
            >
              <span
                className="remove-button-margin"
              >
                <button
                  className=" usa-button usa-button--unstyled"
                  disabled={false}
                  onClick={[Function]}
                  type="button"
                >
                  Notes
                </button>
              </span>
              <span
                style={
                  Object {
                    "margin": "0 5px",
                  }
                }
              >
                 · 
              </span>
              <span
                className="remove-button-margin"
              >
                <button
                  className=" usa-button usa-button--unstyled"
                  disabled={false}
                  onClick={[Function]}
                  type="button"
                >
                  Case History
                </button>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  <div
    style={
      Object {
        "margin": "10px 0",
      }
    }
  >
    <div
      className="card"
    >
      <div
        className="card-body"
      >
        <div
          className="case-header"
        >
          <a
            className="receiptNumber"
            href="https://example.com/FKE8206743"
            target="_elis_viewer"
          >
            FKE8206743
          </a>
          <div
            className="remove-button-margin"
          >
            <button
              className=" usa-button"
              disabled={false}
              onClick={[Function]}
              type="button"
            >
              Edit
            </button>
          </div>
        </div>
        <div
          className="case-data"
        >
          <div
            className="case-state"
          >
            <div
              style={
                Object {
                  "marginRight": "5px",
                }
              }
            >
              <span
                className="usa-tag"
                data-for="resolved"
                data-tip="Resolved"
                style={
                  Object {
                    "textTransform": "none",
                    "whiteSpace": "nowrap",
                  }
                }
              >
                <svg
                  aria-hidden="true"
                  className="svg-inline--fa fa-check fa-w-16 "
                  data-icon="check"
                  data-prefix="fas"
                  focusable="false"
                  role="img"
                  style={Object {}}
                  viewBox="0 0 512 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M173.898 439.404l-166.4-166.4c-9.997-9.997-9.997-26.206 0-36.204l36.203-36.204c9.997-9.998 26.207-9.998 36.204 0L192 312.69 432.095 72.596c9.997-9.997 26.207-9.997 36.204 0l36.203 36.204c9.997 9.997 9.997 26.206 0 36.204l-294.4 294.401c-9.998 9.997-26.207 9.997-36.204-.001z"
                    fill="currentColor"
                    style={Object {}}
                  />
                </svg>
                <div
                  className="__react_component_tooltip place-top type-dark "
                  data-id="tooltip"
                  id="resolved"
                />
              </span>
            </div>
          </div>
          <div
            className="case-problem"
          >
            <div
              style={
                Object {
                  "marginRight": "5px",
                }
              }
            >
              <span
                className="usa-tag technical_issue"
                style={
                  Object {
                    "textTransform": "none",
                    "whiteSpace": "nowrap",
                  }
                }
              >
                Tech Issue
              </span>
            </div>
          </div>
          <div
            className="case-creation"
          >
            Jun 17, 2019
          </div>
          <div
            className="case-reason text-gray-50"
          >
            (
            Enthusiasm
            )
          </div>
        </div>
        <div
          className="case-metadata text-gray-70"
        >
          <div
            className="status"
          >
            Eschewing Obfuscation
             -
             
            Amazingly Successful
          </div>
          <div
            className="platform"
          >
            SP
             
            Platform
          </div>
        </div>
        <div
          className="case-footer"
        >
          <div
            className="case-links"
          >
            <a
              href="http://www.example.com/1234"
              rel="noopener noreferrer"
              target="_blank"
            >
              1234
            </a>
            <span
              style={
                Object {
                  "margin": "0 5px",
                }
              }
            >
               · 
            </span>
            <div
              style={
                Object {
                  "display": "flex",
                }
              }
            >
              <span
                className="remove-button-margin"
              >
                <button
                  className=" usa-button usa-button--unstyled"
                  disabled={false}
                  onClick={[Function]}
                  type="button"
                >
                  Notes
                </button>
              </span>
              <span
                style={
                  Object {
                    "margin": "0 5px",
                  }
                }
              >
                 · 
              </span>
              <span
                className="remove-button-margin"
              >
                <button
                  className=" usa-button usa-button--unstyled"
                  disabled={false}
                  onClick={[Function]}
                  type="button"
                >
                  Case History
                </button>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`Storyshots I90Table Unchecked case view 1`] = `
Array [
  <div
    style={
      Object {
        "margin": "10px 0",
      }
    }
  >
    <div
      className="card"
    >
      <div
        className="card-body"
      >
        <div
          className="case-header"
        >
          <a
            className="receiptNumber"
            href="https://example.com/FKE5381523"
            target="_elis_viewer"
          >
            FKE5381523
          </a>
          <div
            className="remove-button-margin"
          >
            <button
              className=" usa-button"
              disabled={false}
              onClick={[Function]}
              type="button"
            >
              Edit
            </button>
          </div>
        </div>
        <div
          className="case-data"
        >
          <div
            className="case-state"
          >
            <div
              style={
                Object {
                  "marginRight": "5px",
                }
              }
            >
              <span
                className="usa-tag bg-base-lighter"
                data-for="Untouched"
                data-tip="Unkown aging case"
                style={
                  Object {
                    "textTransform": "none",
                    "whiteSpace": "nowrap",
                  }
                }
              >
                 
                <div
                  className="__react_component_tooltip place-top type-dark "
                  data-id="tooltip"
                  id="Untouched"
                />
              </span>
            </div>
          </div>
          <div
            className="case-problem"
          />
          <div
            className="case-creation"
          >
            Aug 6, 2019
          </div>
          <div
            className="case-reason text-gray-50"
          >
            (
            Boredom
            )
          </div>
        </div>
        <div
          className="case-metadata text-gray-70"
        >
          <div
            className="status"
          >
            Pending
             -
             
            Printing
          </div>
          <div
            className="platform"
          >
            Legacy
             
            Platform
          </div>
        </div>
        <div
          className="case-footer"
        >
          <div
            className="case-links"
          >
            <div
              style={
                Object {
                  "display": "flex",
                }
              }
            >
              <span
                className="remove-button-margin"
              >
                <button
                  className=" usa-button usa-button--unstyled"
                  disabled={false}
                  onClick={[Function]}
                  type="button"
                >
                  Notes
                </button>
              </span>
              <span
                style={
                  Object {
                    "margin": "0 5px",
                  }
                }
              >
                 · 
              </span>
              <span
                className="remove-button-margin"
              >
                <button
                  className=" usa-button usa-button--unstyled"
                  disabled={false}
                  onClick={[Function]}
                  type="button"
                >
                  Case History
                </button>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  <div
    style={
      Object {
        "margin": "10px 0",
      }
    }
  >
    <div
      className="card"
    >
      <div
        className="card-body"
      >
        <div
          className="case-header"
        >
          <a
            className="receiptNumber"
            href="https://example.com/FKE8206743"
            target="_elis_viewer"
          >
            FKE8206743
          </a>
          <div
            className="remove-button-margin"
          >
            <button
              className=" usa-button"
              disabled={false}
              onClick={[Function]}
              type="button"
            >
              Edit
            </button>
          </div>
        </div>
        <div
          className="case-data"
        >
          <div
            className="case-state"
          >
            <div
              style={
                Object {
                  "marginRight": "5px",
                }
              }
            >
              <span
                className="usa-tag"
                data-for="resolved"
                data-tip="Resolved"
                style={
                  Object {
                    "textTransform": "none",
                    "whiteSpace": "nowrap",
                  }
                }
              >
                <svg
                  aria-hidden="true"
                  className="svg-inline--fa fa-check fa-w-16 "
                  data-icon="check"
                  data-prefix="fas"
                  focusable="false"
                  role="img"
                  style={Object {}}
                  viewBox="0 0 512 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M173.898 439.404l-166.4-166.4c-9.997-9.997-9.997-26.206 0-36.204l36.203-36.204c9.997-9.998 26.207-9.998 36.204 0L192 312.69 432.095 72.596c9.997-9.997 26.207-9.997 36.204 0l36.203 36.204c9.997 9.997 9.997 26.206 0 36.204l-294.4 294.401c-9.998 9.997-26.207 9.997-36.204-.001z"
                    fill="currentColor"
                    style={Object {}}
                  />
                </svg>
                <div
                  className="__react_component_tooltip place-top type-dark "
                  data-id="tooltip"
                  id="resolved"
                />
              </span>
            </div>
          </div>
          <div
            className="case-problem"
          >
            <div
              style={
                Object {
                  "marginRight": "5px",
                }
              }
            >
              <span
                className="usa-tag technical_issue"
                style={
                  Object {
                    "textTransform": "none",
                    "whiteSpace": "nowrap",
                  }
                }
              >
                Tech Issue
              </span>
            </div>
          </div>
          <div
            className="case-creation"
          >
            Jun 17, 2019
          </div>
          <div
            className="case-reason text-gray-50"
          >
            (
            Enthusiasm
            )
          </div>
        </div>
        <div
          className="case-metadata text-gray-70"
        >
          <div
            className="status"
          >
            Eschewing Obfuscation
             -
             
            Amazingly Successful
          </div>
          <div
            className="platform"
          >
            SP
             
            Platform
          </div>
        </div>
        <div
          className="case-footer"
        >
          <div
            className="case-links"
          >
            <a
              href="http://www.example.com/1234"
              rel="noopener noreferrer"
              target="_blank"
            >
              1234
            </a>
            <span
              style={
                Object {
                  "margin": "0 5px",
                }
              }
            >
               · 
            </span>
            <div
              style={
                Object {
                  "display": "flex",
                }
              }
            >
              <span
                className="remove-button-margin"
              >
                <button
                  className=" usa-button usa-button--unstyled"
                  disabled={false}
                  onClick={[Function]}
                  type="button"
                >
                  Notes
                </button>
              </span>
              <span
                style={
                  Object {
                    "margin": "0 5px",
                  }
                }
              >
                 · 
              </span>
              <span
                className="remove-button-margin"
              >
                <button
                  className=" usa-button usa-button--unstyled"
                  disabled={false}
                  onClick={[Function]}
                  type="button"
                >
                  Case History
                </button>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`Storyshots LoadMore more cases 1`] = `
<div
  className="display-flex flex-column flex-align-center"
>
  <button
    className=" usa-button usa-button--outline"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    Show More
  </button>
</div>
`;

exports[`Storyshots LoadMore more cases loading 1`] = `
<div
  className="display-flex flex-column flex-align-center"
>
  <button
    className=" usa-button usa-button--outline"
    disabled={true}
    onClick={[Function]}
    type="button"
  >
    Loading...
  </button>
</div>
`;

exports[`Storyshots LoadMore no more cases 1`] = `null`;

exports[`Storyshots SnoozeForm Basic re-snooze form 1`] = `
<form
  className="usa-form"
>
  <label
    className="usa-label"
    htmlFor="snoozeReason"
  >
    Problem
  </label>
  <select
    className="usa-select"
    id="snoozeReason"
    name="snoozeReason"
    onChange={[Function]}
    required={true}
    value="3"
  >
    <option
      disabled={true}
      hidden={true}
      value=""
    >
      - Select Reason -
    </option>
    <option
      value="0"
    >
      Technical Issue
    </option>
    <option
      value="1"
    >
      Test Data - should be deleted
    </option>
    <option
      value="2"
    >
      Needs record analysis to review
    </option>
    <option
      value="3"
    >
      Stuck at field office - awaiting response
    </option>
  </select>
  <label
    className="usa-label"
    htmlFor="followUp"
  >
    ServiceNow ticket ID
  </label>
  <input
    className="usa-input"
    id="followUp"
    name="followUp"
    onChange={[Function]}
    type="text"
    value="ABC123"
  />
  <label
    className="usa-label"
    htmlFor="duration"
  >
    Due in (days)
  </label>
  <input
    className="usa-input"
    id="duration"
    max={365}
    min={1}
    name="duration"
    onChange={[Function]}
    type="number"
    value={313}
  />
  <label
    className="usa-label"
    htmlFor="caseIssueNotes"
  >
    Note
  </label>
  <input
    className="usa-input"
    id="caseIssueNotes"
    name="caseIssueNotes"
    onChange={[Function]}
    type="text"
    value=""
  />
  <button
    className=" usa-button"
    disabled={false}
    id="SnoozeSumbit"
    onClick={[Function]}
    type="button"
  >
    Save
  </button>
</form>
`;

exports[`Storyshots SnoozeForm Basic snooze form 1`] = `
<form
  className="usa-form"
>
  <label
    className="usa-label"
    htmlFor="snoozeReason"
  >
    Problem
  </label>
  <select
    className="usa-select"
    id="snoozeReason"
    name="snoozeReason"
    onChange={[Function]}
    required={true}
    value="0"
  >
    <option
      disabled={true}
      hidden={true}
      value=""
    >
      - Select Reason -
    </option>
    <option
      value="0"
    >
      Technical Issue
    </option>
    <option
      value="1"
    >
      Test Data - should be deleted
    </option>
    <option
      value="2"
    >
      Needs record analysis to review
    </option>
    <option
      value="3"
    >
      Stuck at field office - awaiting response
    </option>
  </select>
  <label
    className="usa-label"
    htmlFor="technicalSubtype"
  >
    Specific Issue
  </label>
  <select
    className="usa-select"
    id="technicalSubtype"
    name="technicalSubtype"
    onChange={[Function]}
    required={true}
  >
    <option
      disabled={true}
      hidden={true}
      value=""
    >
      - Select Specific Issue -
    </option>
    <option
      value="0"
    >
      Cannot refresh TECS Check
    </option>
    <option
      value="1"
    >
      Undo referral
    </option>
    <option
      value="2"
    >
      Unable to Update DOB
    </option>
    <option
      value="3"
    >
      Unable to update address
    </option>
    <option
      value="4"
    >
      Unable to assign/un-assign
    </option>
    <option
      value="5"
    >
      Card Production Error
    </option>
    <option
      value="6"
    >
      Case stuck in current state, and needs to be pushed to next phase
    </option>
    <option
      value="7"
    >
      Needs to be Closed
    </option>
  </select>
  <label
    className="usa-label"
    htmlFor="followUp"
  >
    ServiceNow ticket ID
  </label>
  <input
    className="usa-input"
    id="followUp"
    name="followUp"
    onChange={[Function]}
    type="text"
    value=""
  />
  <label
    className="usa-label"
    htmlFor="duration"
  >
    Due in (days)
  </label>
  <input
    className="usa-input"
    id="duration"
    max={365}
    min={1}
    name="duration"
    onChange={[Function]}
    type="number"
    value={14}
  />
  <label
    className="usa-label"
    htmlFor="caseIssueNotes"
  >
    Note
  </label>
  <input
    className="usa-input"
    id="caseIssueNotes"
    name="caseIssueNotes"
    onChange={[Function]}
    type="text"
    value=""
  />
  <button
    className=" usa-button"
    disabled={false}
    id="SnoozeSumbit"
    onClick={[Function]}
    type="button"
  >
    Save
  </button>
</form>
`;

exports[`Storyshots UsaAlert Success 1`] = `
<div
  className="usa-alert usa-alert--success usa-alert--fit-content"
>
  <div
    className="usa-alert__body"
  >
    <h3
      className="usa-alert__heading"
    >
      Success status
    </h3>
    <p
      className="usa-alert__text"
    >
      Lorem ipsum dolor sit amet,
       
      <a
        href="http://example.com"
      >
        consectetur adipiscing
      </a>
       elit, sed do eiusmod.
    </p>
  </div>
</div>
`;

exports[`Storyshots UsaAlert error 1`] = `
<div
  className="usa-alert usa-alert--error usa-alert--fit-content"
>
  <div
    className="usa-alert__body"
  >
    <h3
      className="usa-alert__heading"
    >
      Error status
    </h3>
    <p
      className="usa-alert__text"
    >
      Lorem ipsum dolor sit amet,
       
      <a
        href="http://example.com"
      >
        consectetur adipiscing
      </a>
       elit, sed do eiusmod.
    </p>
  </div>
</div>
`;

exports[`Storyshots UsaAlert info 1`] = `
<div
  className="usa-alert usa-alert--info usa-alert--fit-content"
>
  <div
    className="usa-alert__body"
  >
    <h3
      className="usa-alert__heading"
    >
      Informative status
    </h3>
    <p
      className="usa-alert__text"
    >
      Lorem ipsum dolor sit amet,
       
      <a
        href="http://example.com"
      >
        consectetur adipiscing
      </a>
       elit, sed do eiusmod.
    </p>
  </div>
</div>
`;

exports[`Storyshots UsaAlert warning 1`] = `
<div
  className="usa-alert usa-alert--warning usa-alert--fit-content"
>
  <div
    className="usa-alert__body"
  >
    <h3
      className="usa-alert__heading"
    >
      Warning status
    </h3>
    <p
      className="usa-alert__text"
    >
      Lorem ipsum dolor sit amet,
       
      <a
        href="http://example.com"
      >
        consectetur adipiscing
      </a>
       elit, sed do eiusmod.
    </p>
  </div>
</div>
`;

exports[`Storyshots UsaButton Secondary button 1`] = `
<button
  className=" usa-button usa-button--secondary"
  disabled={false}
  onClick={[Function]}
  type="button"
>
  Submit
</button>
`;

exports[`Storyshots UsaSelect Select 1`] = `
<select
  className="usa-select"
  id="name"
  name="name"
  onChange={[Function]}
  required={true}
  value="0"
>
  <option
    disabled={true}
    hidden={true}
    value=""
  >
    placeholder
  </option>
  <option
    value="0"
  >
    x
  </option>
  <option
    value="1"
  >
    y
  </option>
  <option
    value="2"
  >
    z
  </option>
</select>
`;
